--- a/css/main.css
+++ b/css/main.css
@@ -65,10 +65,24 @@ body {
   color: #9fabb2;
 }
 
-.heading-primary {
-  font-size: 3rem;
+.heading {
+  font-size: 3.2rem;
   color: #4c545d;
   margin: 0;
+}
+
+@media (min-width: 56.25em) {
+  .heading {
+    font-size: 4.2rem;
+  }
+}
+
+.heading--secondary {
+  font-size: 3.2rem;
+}
+
+.heading--tertiary {
+  font-size: 2.6rem;
 }
 
 .paragraph {
@@ -135,7 +149,17 @@ body {
 @media (min-width: 56.25em) {
   .hero {
     background-image: url(../images/bg-header-desktop.png);
-    padding: 10rem;
+    padding: 12rem;
+  }
+}
+
+.hero__img {
+  margin-bottom: 3rem;
+}
+
+@media (min-width: 56.25em) {
+  .hero__img {
+    margin-bottom: 5rem;
   }
 }
 
@@ -144,14 +168,21 @@ body {
   font-size: 1.8rem;
   display: inline-block;
   padding: 1.5rem 8rem;
+  font-weight: 700;
   background-color: #26baa4;
   color: white;
   border-radius: 100rem;
-  border-bottom: 2px solid #22a591;
+  border-bottom: 3px solid #22a591;
   -webkit-box-shadow: 0 1rem 2rem rgba(76, 84, 93, 0.3);
           box-shadow: 0 1rem 2rem rgba(76, 84, 93, 0.3);
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
+}
+
+@media (min-width: 56.25em) {
+  .btn, .btn:link, .btn:visited {
+    padding: 1.5rem 3rem;
+  }
 }
 
 .btn:hover {
@@ -167,7 +198,7 @@ body {
 
 .btn--blue, .btn--blue:link, .btn--blue:visited {
   background-color: #6173ff;
-  border-bottom: 2px solid #485cff;
+  border-bottom: 3px solid #485cff;
 }
 
 @media (min-width: 56.25em) {
@@ -264,10 +295,9 @@ body {
   margin-right: 2rem;
 }
 
-.footer__social-img {
-  -webkit-filter: #26baa4;
-          filter: #26baa4;
-  color: orangered;
+.footer__social-img:hover {
+  -webkit-filter: invert(58%) sepia(63%) saturate(465%) hue-rotate(122deg) brightness(92%) contrast(93%);
+          filter: invert(58%) sepia(63%) saturate(465%) hue-rotate(122deg) brightness(92%) contrast(93%);
 }
 
 .tools__description {
@@ -275,7 +305,7 @@ body {
 }
 
 .tools__item-img {
-  height: 5rem;
+  height: 4rem;
 }
 
 .tools__item {
