--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -4,10 +4,19 @@ body {
   color: $color-gray;
 }
 
-.heading-primary {
-  font-size: 3rem;
+.heading {
+  font-size: 3.2rem;
   color: $color-dark;
   margin: 0;
+  @include respond(tab-land) {
+    font-size: 4.2rem;
+  }
+  &--secondary {
+    font-size: 3.2rem;
+  }
+  &--tertiary {
+    font-size: 2.6rem;
+  }
 }
 
 .paragraph {
