--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -6,12 +6,16 @@
     font-size: 1.8rem;
     display: inline-block;
     padding: 1.5rem 8rem;
+    font-weight: 700;
     background-color: $color-primary;
     color: white;
     border-radius: 100rem;
-    border-bottom: 2px solid darken($color-primary, 5%);
+    border-bottom: 3px solid darken($color-primary, 5%);
     box-shadow: 0 1rem 2rem rgba($color-dark, 0.3);
     transition: all 0.2s;
+    @include respond(tab-land) {
+      padding: 1.5rem 3rem;
+    }
   }
   &:hover {
     transform: translateY(-1px);
@@ -27,7 +31,7 @@
     &:link,
     &:visited {
       background-color: $color-secondary;
-      border-bottom: 2px solid darken($color-secondary, 5%);
+      border-bottom: 3px solid darken($color-secondary, 5%);
     }
   }
 }
